--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "func-style": [ "warn", "expression", { "allowArrowFunctions": true } ]
     },
     "parserOptions": {
-        "ecmaVersion": 6
+        "ecmaVersion": 8,
+        "sourceType": "module"
     }
 }
