--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
     "trailingComma": "es5",
     "tabWidth": 4,
     "useTabs": false,
-    "parser": "babylon",
+    "parser": "babel",
     "bracketSpacing": true,
     "arrowParens": "always"
 }
