--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "watch": "watchify src/*.js -o dist/bundle.js  -dv -t [ babelify ]",
-    "serve": "http-server dist/",
+    "serve": "serve -l 8080 dist/",
     "livereload": "livereload dist/",
     "dev": "npm run serve & npm run livereload & npm run watch",
     "lint": "eslint src"
@@ -26,9 +26,9 @@
     "browserify": "^16.5.1",
     "eslint": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "http-server": "^0.12.3",
     "livereload": "^0.9.1",
     "prettier": "^2.0.5",
+    "serve": "^11.3.0",
     "watchify": "^3.11.1"
   },
   "dependencies": {
